# rye-os

./: .gitignore  README.md  conftest.py  pytest.ini
docs/: ARCHITECTURE_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  index.md  permission-format-change.md
docs/rye/: mcp-server.md
docs/rye/bundle/: STRIP_BACK_PLAN.md  structure.md
docs/rye/executor/: overview.md
docs/rye/mcp-tools/: help.md  overview.md
docs/rye/package/: structure.md
docs/rye/primary-items/: directive-metadata.md  tool-metadata.md
lilux/: pyproject.toml
lilux/lilux/primitives/: __init__.py  http_client.py  integrity.py  lockfile.py  subprocess.py
lilux/lilux/runtime/: auth.py  env_resolver.py
new_docs/reference/file-formats/: lockfile-format.md
new_docs/security/: content-signing.md  security-overview.md
rye/: pyproject.toml
rye/rye/: constants.py  server.py  tool_runner.py
rye/rye/executor/: __init__.py  chain_validator.py  integrity_verifier.py  lockfile_resolver.py  (+1 more)
scripts/: sign_all.py
tests/: test_executor.py
tests/lilux/: test_auth_store.py  test_env_resolver.py  test_errors.py  test_http_client.py  test_integrity.py  test_lockfile.py  test_schema_validator.py  test_subprocess.py
tests/rye/: __init__.py  conftest.py  test_capability_harness.py  test_execute.py  test_load.py  test_thread_harness_integration.py
tests/rye_tests/: test_agent_threads_future.py  test_capability_harness.py  test_execute.py  test_search.py  test_server.py  test_sign.py  test_system_prompt.py  test_thread_harness_integration.py  test_transcript_telemetry.py
tests/security/: test_injection.py
(+153 files in other folders)
